errors_output.txt
hello_world.c: In function ‘main’:
hello_world.c:4:13: error: expected ‘;’ before ‘}’ token
    4 |     return 0
      |             ^
      |             ;
    5 | }
      | ~            
